added hacktoberfest content :see_no_evil:

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -1,9 +1,18 @@
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
+
 html, body {
-	padding: 0;
+  background-color: $white-color;
+	color: $paragraph-color;
+	font-family: $paragraph-font-family;
+	font-weight: $paragraph-weight;
 	margin: 0;
-	font-family: 'Open Sans', sans-serif;
-	color: #333;
 	min-width: 380px;
+	padding: 0;
+  // height: 100%;
+  // width: 100%;
 }
 
 img {
@@ -11,22 +20,35 @@ img {
 }
 
 hr {
-	height:1px;
+	background-color: #236ace;
 	border: 0;
-	background-color: #ddd;
+	height:1px;
 	margin-bottom: 50px;
 }
 
+h1, h2, h3, h4 {
+	color: $header-color;
+	font-family: $header-font-family;
+	font-weight: $header-weight;
+	text-align: center;
+
+	a {
+		color: $header-color;
+		font-family: $header-font-family;
+		font-weight: $header-weight;
+		text-decoration: none;
+	}
+}
+
 h1 {
-	padding: 0;
-	margin: 0 0 20px 0;
 	font-size: 3em;
+	margin: 0 0 20px 0;
+	padding: 0;
 }
 
 h2 {
 	font-size: 2.3em;
 	margin: 0 0 30px 0;
-	text-align: center;
 }
 
 h3 {
@@ -34,10 +56,13 @@ h3 {
 	margin: 20px 0 20px 0;
 }
 
-p {
+p, pre {
+	color: $paragraph-color;
+	font-family: $paragraph-font-family;
 	font-size: 1.3em;
-	line-height: 1.4em;
-	color: #888;
+	font-weight: $paragraph-weight;
+  line-height: 1.4em;
+  text-align: justify;
 }
 
 nav {
@@ -54,59 +79,58 @@ section {
 
 form {
 	display: flex;
-	max-width: 500px;
 	margin: 0 auto;
+	max-width: 500px;
 
 	input[type="text"] {
+		border: 1px solid $amber-color;
 		flex-grow: 1;
 		flex-shrink: 1;
 		width: 100%;
-		border: 1px solid #ddd;
-
 
 		&, &:focus {
-			border-top-left-radius: 30px;
 			border-bottom-left-radius: 30px;
+			border-top-left-radius: 30px;
 		}
 
 		&:focus {
-			box-shadow: 0 0 5px 0 $brand-color;
+			box-shadow: 0 0 5px 0 $amber-color;
 			outline: none;
 		}
 	}
 
 	input[type="submit"] {
-		border-top-right-radius: 30px;
 		border-bottom-right-radius: 30px;
+		border-top-right-radius: 30px;
 
 		&:hover {
-			background: darken($brand-color, 5%);
+			background: darken($amber-color, 5%);
 		}
 	}
 }
 
 .button a, input[type="submit"], input[type="text"] {
 	border: 0;
-	padding: 15px 40px;
 	box-sizing: content-box;
 	font-size: 1em;
 	font-weight: 100;
+	padding: 15px 40px;
 }
 
 .button a, input[type="submit"] {
-	background: $brand-color;
-	color: #fff;
+	background: $amber-color;
+	color: $button-color;
 	cursor: pointer;
 	font-weight: bold;
 }
 
 .button a {
+	border-radius: 5px;
 	display: inline-block;
 	text-decoration: none;
-	border-radius: 30px;
 	transition: 200ms ease-in background;
 
 	&:hover {
-		background: darken($brand-color, 5%);
+		background: darken($amber-color, 10%);
 	}
 }
