--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,36 +3,46 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    {% seo %}
+    <title>Hacktoberfest Joinville</title>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Hacktoberfest Joinville" />
+    <meta property="og:site_name" content="Hacktoberfest Joinville" />
+    <meta property="og:description" content="A maratona de contribuição para projetos Open Source de Joinville!" />
+    <meta property="og:url" content="https://hacktoberfest.joinville.br" />
+    <meta property="og:image" content="http://hacktoberfest.joinville.br/images/hacktoberfest-banner.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Hacktoberfest Joinville">
+    <meta property="og:locale" content="pt_BR" />
+
+    <link rel="canonical" href="https://hacktoberfest.joinville.br">
+    <meta name="author" content="Hacktoberfest Joinville">
+    <meta name="description" content="Hacktoberfest Joinville: a maratona de contribuição para projetos Open Source de Joinville!">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png" sizes="32x32">
 
-    {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-      <script>
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-        ga('create', '{{ site.google_analytics_key }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-      <script async src='https://www.google-analytics.com/analytics.js'></script>
-    {% endif %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script async src='https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.1.2/lazysizes.min.js'></script>
-    {% asset main.js %}
+    <script src="/js/main.js" type="text/javascript"></script>
   </head>
   <body>
     <header>
-      {% asset hacktoberfest-banner.png %}
+      <img src="/images/hacktoberfest-banner.png">
     </header>
 
     <div class="content">
       {{ content }}
     </div>
     <footer>
-      {% asset hacktoberfest-banner-footer.png %}
+      <center>
+        <img src="/images/hacktoberfest-banner-footer.png">
+      </center>
     </footer>
   </body>
 </html>
