--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
 
     <title>Hacktoberfest Joinville</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Hacktoberfest Joinville" />
     <meta property="og:site_name" content="Hacktoberfest Joinville" />
-    <meta property="og:description" content="A maratona de contribuição para projetos Open Source de Joinville!" />
+    <meta
+      property="og:description"
+      content="A maratona de contribuição para projetos Open Source de Joinville!"
+    />
     <meta property="og:url" content="https://hacktoberfest.joinville.br" />
-    <meta property="og:image" content="http://hacktoberfest.joinville.br/images/hacktoberfest-banner.png" />
+    <meta
+      property="og:image"
+      content="http://hacktoberfest.joinville.br/images/hacktoberfest-banner.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Hacktoberfest Joinville">
+    <meta property="og:image:alt" content="Hacktoberfest Joinville" />
     <meta property="og:locale" content="pt_BR" />
 
-    <link rel="canonical" href="https://hacktoberfest.joinville.br">
-    <meta name="author" content="Hacktoberfest Joinville">
-    <meta name="description" content="Hacktoberfest Joinville: a maratona de contribuição para projetos Open Source de Joinville!">
+    <link rel="canonical" href="https://hacktoberfest.joinville.br" />
+    <meta name="author" content="Hacktoberfest Joinville" />
+    <meta
+      name="description"
+      content="Hacktoberfest Joinville: a maratona de contribuição para projetos Open Source de Joinville!"
+    />
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png" sizes="32x32">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{{ site.baseurl }}/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="{{ site.baseurl }}/favicon.png"
+      sizes="32x32"
+    />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script async src='https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.1.2/lazysizes.min.js'></script>
+    <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/4.1.2/lazysizes.min.js"
+    ></script>
     <script src="/js/main.js" type="text/javascript"></script>
   </head>
   <body>
     <header>
-      <img src="/images/hacktoberfest-banner.png">
+      <img src="/images/hacktoberfest-banner.png" />
     </header>
 
     <div class="content">
@@ -41,7 +65,7 @@
     </div>
     <footer>
       <center>
-        <img src="/images/hacktoberfest-banner-footer.png">
+        <img src="/images/hacktoberfest-banner-footer.png" />
       </center>
     </footer>
   </body>
