--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Rubik:400,500');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Rubik:400,500");
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
@@ -7,19 +6,19 @@ $mid-point: "(min-width: 768px)";
 $desktop: "(min-width: 992px)";
 
 $brand-color: #236ace;
-$header-color: #582D41;
+$header-color: #582d41;
 
-$crimson-color: #582D41;
-$cyan-color: #01FFFF;
-$blue-color: #2B81D9;
-$amber-color: #FF9A56;
+$crimson-color: #582d41;
+$cyan-color: #01ffff;
+$blue-color: #2b81d9;
+$amber-color: #ff9a56;
 $white-color: #ffffff;
 
 $paragraph-color: #000000;
 $button-color: #411e2f;
-$header-font-family: 'Rubik', sans-serif;
+$header-font-family: "Rubik", sans-serif;
 $header-weight: 500;
-$paragraph-font-family: 'Montserrat', sans-serif;
+$paragraph-font-family: "Montserrat", sans-serif;
 $paragraph-weight: 200;
 
 .blue-color {
