--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -311,8 +311,8 @@ footer {
   }
 }
 
-.orange {
-  background-color: #ff9a56;
+.dark-blue {
+  background-color: #0a142e;
   color: $white-color;
   p {
     color: $white-color !important;
@@ -327,7 +327,7 @@ footer {
 }
 
 .share {
-  background-color: #411e2f;
+  background-color: #0a142e;
   border-radius: 16px;
   padding: 48px;
   text-align: center;
