--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,16 +6,16 @@ $mid-point: "(min-width: 768px)";
 $desktop: "(min-width: 992px)";
 
 $brand-color: #236ace;
-$header-color: #582d41;
+$header-color: #0a142e;
 
-$crimson-color: #582d41;
+$crimson-color: #0a142e;
 $cyan-color: #01ffff;
 $blue-color: #2b81d9;
 $amber-color: #ff9a56;
 $white-color: #ffffff;
 
 $paragraph-color: #000000;
-$button-color: #411e2f;
+$button-color: #0a142e;
 $header-font-family: "Rubik", sans-serif;
 $header-weight: 500;
 $paragraph-font-family: "Montserrat", sans-serif;
