--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://hacktoberfest.joinville.br" />
     <meta
       property="og:image"
-      content="http://hacktoberfest.joinville.br/images/hacktoberfest-banner.png"
+      content="http://hacktoberfest.joinville.br/images/2018/hacktoberfest-banner.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -56,17 +56,17 @@
     <script src="/js/main.js" type="text/javascript"></script>
   </head>
   <body>
-    <header>
-      <img src="/images/hacktoberfest-banner.png" />
+    <header style="padding: 2%">
+      <img src="/images/2019/hacktoberfest-logo.png" />
     </header>
 
     <div class="content">
       {{ content }}
     </div>
-    <footer>
+    <!-- <footer>
       <center>
-        <img src="/images/hacktoberfest-banner-footer.png" />
+        <img src="/images/2019/hacktoberfest-footer.png" />
       </center>
-    </footer>
+    </footer> -->
   </body>
 </html>
