Inserido a mesma logo do HF da DigitalOcean

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
   </head>
   <body>
     <header style="padding: 2%">
-      <img src="/images/2019/hacktoberfest-logo.png" />
+      <img src="/images/2019/HF19_logo.png" />
     </header>
 
     <div class="content">
