:lipstick: Added hero and column styles

--- a/src/assets/style/components/hero.scss
+++ b/src/assets/style/components/hero.scss
@@ -834,3 +834,108 @@
     background-image: linear-gradient(141deg, #ff0561, #ff3860 71%, #ff5257);
   }
 }
+
+.hero.is-small .hero-body {
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+}
+
+@media print, screen and (min-width: 769px) {
+  .hero.is-medium .hero-body {
+    padding-bottom: 9rem;
+    padding-top: 9rem;
+  }
+}
+
+@media print, screen and (min-width: 769px) {
+  .hero.is-large .hero-body {
+    padding-bottom: 18rem;
+    padding-top: 18rem;
+  }
+}
+
+.hero.is-fullheight-with-navbar .hero-body,
+.hero.is-fullheight .hero-body,
+.hero.is-halfheight .hero-body {
+  align-items: center;
+  display: flex;
+}
+
+.hero.is-fullheight-with-navbar .hero-body > .container,
+.hero.is-fullheight .hero-body > .container,
+.hero.is-halfheight .hero-body > .container {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.hero.is-halfheight {
+  min-height: 50vh;
+}
+
+.hero.is-fullheight {
+  min-height: 100vh;
+}
+
+.hero-video {
+  overflow: hidden;
+}
+
+.hero-video video {
+  left: 50%;
+  min-height: 100%;
+  min-width: 100%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+}
+
+.hero-video.is-transparent {
+  opacity: 0.3;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-video {
+    display: none;
+  }
+}
+
+.hero-buttons {
+  margin-top: 1.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-buttons .button {
+    display: flex;
+  }
+  .hero-buttons .button:not(:last-child) {
+    margin-bottom: 0.75rem;
+  }
+}
+
+@media print, screen and (min-width: 769px) {
+  .hero-buttons {
+    display: flex;
+    justify-content: center;
+  }
+  .hero-buttons .button:not(:last-child) {
+    margin-right: 1.5rem;
+  }
+}
+
+.hero-foot,
+.hero-head {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.hero-body {
+  flex-grow: 1;
+  flex-shrink: 0;
+  padding: 3rem 1.5rem;
+}
+
+.has-navbar-fixed-bottom .is-fullheight,
+.has-navbar-fixed-top .is-fullheight {
+  min-height: calc(100vh - 3.5rem) !important;
+}
