--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -2,6 +2,7 @@
 @import "./assets/style/components/container.scss";
 @import "./assets/style/components/navbar.scss";
 @import "./assets/style/components/hero.scss";
+@import "./assets/style/components/column.scss";
 
 body {
   background: $background-color;
